# ProjektyVUTFIT

./: README.md
Bakalarske_Studium/: README.md
Bakalarske_Studium/IMP/projekt/: Documentation.docx
Bakalarske_Studium/IMP/projekt/Sources/: main.c
Bakalarske_Studium/IMS/projekt/: Makefile  facilities.hpp  main.cpp  packet.hpp  pause.hpp  sortedpacket.hpp
Bakalarske_Studium/IPK/proj1/: Makefile  hinfosvc.c  readme.md
Bakalarske_Studium/IPP/proj1/: parse.php
Bakalarske_Studium/IPP/proj2/: interpret.py
Bakalarske_Studium/ITY/proj1/: Makefile  proj1.tex
Bakalarske_Studium/ITY/proj2/: Makefile  proj2.tex
Bakalarske_Studium/ITY/proj3/: Makefile  proj3.tex
Bakalarske_Studium/ITY/proj5/: Makefile  proj5.tex
Bakalarske_Studium/IVH/Projects/IVH_Projekt1/: IVH_Projekt1.gise  IVH_Projekt1.xise  counter.vhd  counter_tb.vhd  counter_tb_isim_beh.wdb  effects_pack.vhd  effects_pack_tb.vhd  effects_pack_tb_stx_beh.prj  effects_pack_tb_summary.html  fuseRelaunch.cmd
Bakalarske_Studium/IVH/Projects/display/: CNT_tb.vhd  column_tb.vhd  ivh_projekt.xise
Bakalarske_Studium/IVH/Projects/ivh_projekt/: CNT.vhd  CNT.xst  cnt_for_n.xst  fpga.bgn  fpga.bit  fpga.bld  fpga.ngd  fpga.ngr  fpga.par  fpga.pcf  fpga.ptwx  fpga.twr  fpga.xst  fpga_envsettings.html  fpga_map.map  fpga_map.ncd  fpga_map.xrpt  fpga_ngdbuild.xrpt  fpga_pad.csv  fpga_pad.txt  fpga_par.xrpt  fpga_summary.html  fpga_usage.xml  fsm_tb.vhd  fsm_tb_beh.prj  ivh_projekt.gise  ivh_projekt.xise
Bakalarske_Studium/IVH/Projects/proj_template/: CNT.prj  CNT.stx  CNT_vhdl.prj  cnt_for_n.stx  cnt_for_n_vhdl.prj  column_tb_isim_beh1.wdb  fpga.cmd_log  fpga.drc  fpga.ncd  fpga.ngc  fpga.pad  fpga.prj  fpga.syr  fpga.twx  fpga.unroutes  fpga_bitgen.xwbt  fpga_map.mrp  fpga_map.ngm  fpga_summary.html  (+13 more)
Bakalarske_Studium/IZP/proj1/: sheet.c
Bakalarske_Studium/SZZ/Bakalarka/: FileDialog.py  README.txt  camera.py  main.py  objLoader.py  read_point_cloud.py  read_xml_scene.py  requirements.txt
LSem_23-24/FLP/Haskell_proj/: Makefile  main.hs  trainingData
LSem_23-24/FLP/Prolog_proj/: Makefile  README.md  flp23-log.pl  in3.txt  in4.txt
LSem_23-24/FYO/: FYO-prezentacia.pptx
LSem_23-24/FYO/projekt/: app.py  app.spec  main.py
LSem_23-24/MUL/: cv1.html
LSem_23-24/MUL/cv3/: env.mk
LSem_23-24/MUL/cv5/mul-opengl/: CMakeLists.txt  main.cpp
LSem_23-24/MUL/projekt/: Makefile  gifcreator.py  predSpustenim.txt
LSem_23-24/PRL/proj1/: pms.cpp  run.sh
LSem_23-24/PRL/proj2/: life.cpp  start  test.sh
LSem_23-24/ZPO/: mt01.cpp  mt02.cpp  mt03.cpp  mt04.cpp
ZSem_23-24/AVS/Proj1/: BatchMandelCalculator.cc  BatchMandelCalculator.h  LineMandelCalculator.cc  LineMandelCalculator.h  MB-xduric05.txt  tree_mesh_builder.cpp
ZSem_23-24/AVS/Proj2/: PMC-xduric05.txt  loop_mesh_builder.cpp  loop_mesh_builder.h  tree_mesh_builder.h
ZSem_23-24/MSP/Projekt-1/: proj1.ipynb
ZSem_23-24/MSP/Projekt-2/: projekt2.html  projekt2.ipynb
ZSem_23-24/PGR/fitgraphics/: CMakeLists.txt  CMakeUtils.cmake  README.md
ZSem_23-24/PGR/fitgraphics/libs/SDL2CPP/: CMakeLists.txt
ZSem_23-24/PGR/fitgraphics/libs/Simple3DApp/: CMakeUtils.cmake
ZSem_23-24/PGR/fitgraphics/libs/VarsGLMDecorator/: CMakeLists.txt  README.md
ZSem_23-24/PGR/fitgraphics/libs/VarsGLMDecorator/src/VarsGLMDecorator/: VarsGLMDecorator.h
ZSem_23-24/PGR/fitgraphics/libs/imguiOpenGLDormon/: CMakeLists.txt
ZSem_23-24/PGR/fitgraphics/libs/imguiOpenGLDormon/src/imguiOpenGLDormon/: BackupOpenGLState.cpp  GetProcAddress.cpp  Renderer.h  RendererImpl.cpp  RendererImpl.h
ZSem_23-24/PGR/fitgraphics/libs/imguiSDL2Dormon/: CMakeLists.txt
ZSem_23-24/PGR/fitgraphics/libs/imguiSDL2Dormon/src/imguiSDL2Dormon/: EventHandler.cpp  EventHandler.h  EventHandlerImpl.cpp  EventHandlerImpl.h
ZSem_23-24/PGR/fitgraphics/libs/imguiSDL2OpenGL/: CMakeLists.txt
ZSem_23-24/PGR/fitgraphics/libs/imguiSDL2OpenGL/src/imguiSDL2OpenGL/: imgui.cpp  imgui.h
ZSem_23-24/PGR/fitgraphics/libs/imguiVars/: CMakeLists.txt
ZSem_23-24/PGR/fitgraphics/libs/imguiVars/src/imguiVars/: imguiVars.cpp
ZSem_23-24/PGR/fitgraphics/projekt_dep/shaders/: FinalRender.fs  HemicubeVisTex.vs  LightmapUpdate.fs  LightmapUpdate.vs  Preprocess.vs  shooterMeshSelection.vs  vertex.glsl
ZSem_23-24/PGR/fitgraphics/resources/: point-hsh-data.dump
ZSem_23-24/PGR/fitgraphics/resources/shaders/: lf_blend.glsl  sphere_ray.glsl  spherical_harmonic_visualizer.glsl
ZSem_23-24/PGR/fitgraphics/src/GMU/lab/: nbody.cpp  nbody.hpp
ZSem_23-24/PGR/fitgraphics/src/LKG/: lf_blend.cpp  lf_blend.hpp  lkgp.cpp  lkgp.hpp  spherical_harmonic_visualizer.cpp  spherical_harmonic_visualizer.hpp
ZSem_23-24/PGR/fitgraphics/src/MISC/: CMakeLists.txt  memoryBandwidth.cpp  rasterizationOrder.cpp  tessellationLevels.cpp
ZSem_23-24/PGR/fitgraphics/src/PGP/: homework1.cpp  homework2.cpp  homework3.cpp  homework4.cpp  homework5.cpp
ZSem_23-24/PGR/fitgraphics/src/PGP/lect/: compute.cpp  compute.hpp
ZSem_23-24/PGR/fitgraphics/src/PGR/01/: buffers.cpp  buffers.hpp  camera.cpp  camera.hpp  compileShaders.cpp  compileShaders.hpp  emptyWindow.cpp  emptyWindow.hpp  freelookCamera.cpp  freelookCamera.hpp  geometryShaders.cpp  geometryShaders.hpp  oglFunc.cpp  primitives.cpp  primitives.hpp  shaderExamples.hpp  shaders.cpp  shaders.hpp  task.cpp  task.hpp  vertexArrays.cpp  vertexArrays.hpp
ZSem_23-24/PGR/fitgraphics/src/PGR/02/: model.cpp  model.hpp  texture.cpp  texture.hpp  uv.cpp  uv.hpp
ZSem_23-24/PGR/fitgraphics/src/PGR/03/: bezierSurf.cpp  framebuffer.cpp  framebuffer.hpp  phong.cpp  phong.hpp  shadowMapping.cpp  shadowMapping.hpp  shadowVolume.cpp  shadowedModel.cpp  shadowedModel.hpp  stencil.cpp  twoTriangles.cpp  twoTriangles.hpp
ZSem_23-24/PGR/fitgraphics/src/framework/: Barrier.cpp  FunctionPrologue.h  OpenGLState.cpp  OpenGLState.hpp  defineGLSLVersion.cpp  defineGLSLVersion.hpp  main.cpp  makeProgram.cpp  makeProgram.hpp  methodManager.cpp  methodManager.hpp  methodRegister.cpp  methodRegister.hpp  model.cpp  model.hpp
ZSem_23-24/PGR/fitgraphics/src/student/: fragment.glsl  project.cpp  vertex.glsl
ZSem_23-24/PGR/projekt/: project.cpp
(+436 files in other folders)
